@@ -86,7 +86,7 @@ public class DefaultMapAdapter extends WrappingTemplateModel
             // Check for Character key if this is a single-character string.
             // In SortedMap-s, however, we can't do that safely, as it can cause ClassCastException.
             if (key.length() == 1 && !(map instanceof SortedMap)) {
-                Character charKey = new Character(key.charAt(0));
+                Character charKey = Character.valueOf(key.charAt(0));
                 try {
                     val = map.get(charKey);
                     if (val == null) {
